# tauri-updater

./: package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/node/: cert.pem  key.pem  package.json.copy  server.js
src-tauri/src/: main.rs
